Bug 368590 - [wayland] with caps lock key on alt+tab dialog doesn't disappear
Summary: [wayland] with caps lock key on alt+tab dialog doesn't disappear
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2773
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-11 12:35 UTC by Bhushan Shah
Modified: 2016-09-14 11:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2016-09-11 12:35:39 UTC
When doing alt+tab with capslock key turned on, alt+tab dialog doesn't disappear like normal.

Reproducible: Always

Steps to Reproduce:
1. Turn capslock on
2. Do Alt+tab
Comment 1 Martin Flöser 2016-09-12 07:13:38 UTC
The reason for that is that the shift modifier is still on. The relevant code area in Tabbox is:

void TabBox::modifiersChanged(Qt::KeyboardModifiers mods)
{
    if (m_noModifierGrab || !(!mods)) {
        return;
    }

which means that with shift still being on we don't ever get into the code path. This needs rethinking now that we properly handle capslock.

I assume that cancelling the capslock would result in TabBox to close.
Comment 2 Bhushan Shah 2016-09-12 07:16:11 UTC
Yes, canceling the capslock makes TabBox to close.
Comment 3 Martin Flöser 2016-09-13 11:05:52 UTC
Git commit ca6505e84cfd0740ad27cadaa7076b0c72f522b8 by Martin Gräßlin.
Committed on 13/09/2016 at 11:04.
Pushed by graesslin into branch 'master'.

[autotests/integration] Add new test for triggering TabBox

First test case highlight a problem that tabbox doesn't close if
capslock is on.

M  +1    -0    autotests/integration/CMakeLists.txt
A  +142  -0    autotests/integration/tabbox_test.cpp     [License: GPL (v2)]
M  +1    -1    tabbox/tabbox.h

http://commits.kde.org/kwin/ca6505e84cfd0740ad27cadaa7076b0c72f522b8
Comment 4 Martin Flöser 2016-09-14 11:27:14 UTC
Git commit c71b002b24bed549e4f8086901b9cda68e7c5951 by Martin Gräßlin.
Committed on 14/09/2016 at 11:26.
Pushed by graesslin into branch 'master'.

[wayland] Fix release of TabBox on Wayland

Summary:
The interaction is changed to trigger the check for release from the
TabBoxInputFilter instead of reacting on modifier changes. That way
it's possible to check for the relevant modifiers getting released
instead of getting all modifiers in. Also this means that the checks
are only performed when relevant.

Reviewers: #kwin, #plasma_on_wayland, bshah

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2773

M  +0    -2    autotests/integration/tabbox_test.cpp
M  +4    -1    input.cpp
M  +4    -5    tabbox/tabbox.cpp
M  +1    -1    tabbox/tabbox.h

http://commits.kde.org/kwin/c71b002b24bed549e4f8086901b9cda68e7c5951