tabbox/tabbox.h
@@ -181,6 +181,7 @@ public:
     int previousDesktopStatic(int iDesktop) const;
     void keyPress(int key);
     void keyRelease(const xcb_key_release_event_t *ev);
+    void modifiersReleased();
 
     bool forcedGlobalMouseGrab() const {
         return m_forcedGlobalMouseGrab;
@@ -243,7 +244,6 @@ private:
 private Q_SLOTS:
     void reconfigure();
     void globalShortcutChanged(QAction *action, const QKeySequence &seq);
-    void modifiersChanged(Qt::KeyboardModifiers mods);
 
 private:
     TabBoxMode m_tabBoxMode;
